--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <div id="difficulty">hhi</div>
     <div id="disQ">hi</div>
     <div id="disO">hello</div>
+    <div id="disO">hello</div>
+
 </body>
 </html>
