--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div id="difficulty">hhi</div>
-    <div id="disQ">hi</div>
-    <div id="disO">hello</div>
+    <div id="container"></div>
 </body>
 </html>
