--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button type="button" onclick="grabUrl(1)">Fetch Any Questions</button>
+    <button type="button" onclick="grabUrl(2)">Easy Difficulty</button>
+    <button type="button" onclick="grabUrl(3)">Medium Difficulty</button>
+    <button type="button" onclick="grabUrl(4)">Hard Difficulty</button>
+<br><br>
+    <label for="catelist">Choose a Category:</label>
+    <select name="catelist" id="catelist">
+      <option value="">Loading..</option>
+    </select>
+
     <div id="container"></div>
 </body>
 </html>
