--- a/index.html
+++ b/index.html
@@ -8,18 +8,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button type="button" onclick="grabUrl(1)">Fetch Any Questions</button>
-    <button type="button" onclick="grabUrl(2)">Easy Difficulty</button>
-    <button type="button" onclick="grabUrl(3)">Medium Difficulty</button>
-    <button type="button" onclick="grabUrl(4)">Hard Difficulty</button>
+
+    <h1>Welcome to Trivia</h1>
+    <h3>To select a difficulty and category look below and select one. If you want all categories and or difficulties leave it how it is and Submit!</h3>
+<br>
+
+    <div id="submission">
 <br><br>
 <form id="form" onsubmit="return handleSubmit(event);">
     <label for="catelist">Choose a Category:</label>
     <select name="catelist" id="catelist">
         <option value="">Select Any Category</option>
     </select>
+<br>
+    <label for="difficulty">Choose a Difficulty:</label>
+    <select name="difficulty" id="difficulty">
+        <option value="">Select Any Difficulty</option>
+        <option value="easy">Easy Difficulty</option>
+        <option value="medium">Medium Difficulty</option>
+        <option value="hard">Hard Difficulty</option>
+    </select>
+    <br>
+    <div id="submit">
     <input type="submit" value="Submit">
+</div>
 </form>
+</div>
     <div id="container"></div>
 </body>
 </html>
