--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    
     <h1>Welcome to Trivia</h1>
-    <h3>To select a difficulty and category look below and select one. If you want all categories and or difficulties leave it how it is and Submit!</h3>
-<br>
+    <div id="holder">
+<div id="intro">
+    <p>To select a difficulty and category look below and select one. If you want all categories and or difficulties leave it how it is and Submit!</p>
+</div>
+    <br>
 
     <div id="submission">
 <br><br>
@@ -33,6 +36,8 @@
     <input type="submit" value="Submit">
 </div>
 </form>
+</div>
+
 </div>
     <div id="container"></div>
 </body>
