--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Welcome to Trivia</h1>
     <div id="holder">
 <div id="intro">
-    <p>To select a difficulty and category look below and select one. If you want all categories and or difficulties leave it how it is and Submit!</p>
+    <p id="struct">To select a difficulty and category look below and select one. If you want all categories and or difficulties leave it how it is and Submit!</p>
 </div>
     <br>
 
