--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Trivia</title>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="sw.js"></script>
+    <link rel="json" href="manifest.json" class="json">
 </head>
 <body>
     
     <h1>Welcome to Trivia</h1>
+    <div id="timer"></div>
     <div id="holder">
 <div id="intro">
     <p id="struct">To select a difficulty and category look below and select one. If you want all categories and or difficulties leave it how it is and Submit!</p>
