--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="sw.js"></script>
-    <link rel="json" href="manifest.json" class="json">
+    <link rel="manifest" href="manifest.json" />
 </head>
 <body>
     
