--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     
     <h1>Welcome to Trivia</h1>
-    <button id="installButton" style="display: none;">Install App</button>
+    <div id="but">
+        <button id="installButton">Install App</button>
+    </div>
     <div id="timer"></div>
     <div id="holder">
 <div id="intro">
