--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <h1>Welcome to Trivia</h1>
     <div id="but">
-        <button id="installButton">Install App</button>
+        <button id="installButton" style="display: none;">Install App</button>
     </div>
     <div id="timer"></div>
     <div id="holder">
