--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia Central</title>
+    <link rel="icon" type="image/x-icon" href="icon512_rounded.png">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="sw.js"></script>
