--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <br><br><br><br>
-    <h1>Welcome to Trivia</h1>
+    <h1>Welcome to Trivia Central</h1>
     <br>
         <button id="installButton" style="display: none;">Install App</button>
     <div id="timer"></div>
