--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <br><br><br><br>
     <h1>Welcome to Trivia Central</h1>
     <br>
-        <button id="installButton">Install App</button>
+        <button id="installButton" style="display: none;">Install App</button>
     <div id="timer"></div>
     <div id="holder">
 <div id="intro">
