--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Welcome to Trivia Central</h1>
     <br>
     <button id="installButton" style="display: none;">Install App</button>
-    <div id="timer"></div>
+    <div id="time"></div>
     <div id="holder">
 <div id="intro">
     <p id="struct">To select a difficulty and category look below and select one. If you want all categories and or difficulties leave it how it is and Submit!</p>
