--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="sw.js"></script>
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
     <br><br><br><br>
