--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia Central</title>
+
+    <!-- gpt favicon -->
     <link rel="icon" type="image/x-icon" href="icon512_rounded.png">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -16,6 +18,9 @@
     <h1>Welcome to Trivia Central</h1>
     <br>
     <button id="installButton" style="display: none;">Install App</button>
+
+    <button id="reset" onclick="reset()">RESET</button>
+
     <div id="time"></div>
     <div id="holder">
 <div id="intro">
