--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
     <h1>Welcome to Trivia Central</h1>
     <br>
     <button id="installButton" style="display: none;">Install App</button>
+    
+    <div id="resett">
+        <button id="reset" onclick="reset()">RESET</button>   
+    </div>
 
-    <button id="reset" onclick="reset()">RESET</button>
 
     <div id="time"></div>
     <div id="holder">
